# personality-prediction

./: .gitignore  LM_extractor.py  environment.yml  multitrais_training_script.md  pyproject.toml
finetune_models/: MLP_LM_multitrait.py  full_finetune.py  full_finetune_multitrait.py
utils/: data_utils.py  gen_utils.py
