[project]
name = "personality-prediction"
version = "0.1.0"
description = "Automated personality prediction with large language models"
readme = "README.md"
authors = [
    { name = "Yash Mehta", email = "yashsmehta95@gmail.com" }
]
license = "MIT"
requires-python = ">=3.9, <3.12"
dependencies = [
    "tensorflow-cpu>=2.13.0, <3.0.0",
    "tweet-preprocessor>=0.6.0, <0.7.0",
    "sentencepiece>=0.1.99, <0.2.0",
    "numpy>=1.22, <2.0",
    "scikit-learn>=1.3.0, <2.0.0",
    "readability-lxml>=0.8.1",  # Adjusted to valid package name often used for readability
    "pandas>=2.0.3, <3.0.0",
    "transformers[torch]>=4.31.0, <5.0.0",
    "xformers>=0.0.20, <0.1.0",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "torchaudio>=2.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Optional: uv specific settings if needed
